@@ -1,3 +1,9 @@
+2022-07-26  Simon J Gerraty  <sjg@beast.crufty.net>
+
+	* VERSION (_MAKE_VERSION): 20220726
+
+	* Auto-create objdir for bmake/unit-tests if appropriate
+
 2022-07-24  Simon J Gerraty  <sjg@beast.crufty.net>
 
 	* VERSION (_MAKE_VERSION): 20220724
